# pymind

./: LICENSE  README.md  pymind.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: analise_fluxo_core.md  fluxo_core_vetorizacao.md
examples/: treinar_mnist_piramidal.py  visualizar_neuronio.py
pymind/: __init__.py
pymind/arquiteturas/: __init__.py  autoencoder.py  funil.py  piramidal.py  profunda.py
pymind/core/: __init__.py  camada.py  conexoes.py  neuronio.py
pymind/memory/: __init__.py  engram.py  working_memory.py
pymind/models/: __init__.py  mnist.py
pymind/plasticity/: __init__.py  hebbian.py  homeostasis.py  stdp.py
pymind/utils/: __init__.py  treino.py  visualizacao.py
